--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     build:
       context: ./build
       args:
-        UPSTREAM_VERSION: master
+        UPSTREAM_VERSION: 2020.10.02
     image: 'turbo-geth.dnp.dappnode.eth:0.1.0'
     restart: always
     volumes:
       - 'data:/root/.local/share/turbogeth'
     environment:
       - LMDB_MAPSIZE=
+      - EXTRA_OPTS=
 volumes:
   data: {}
