--- a/releases.json
+++ b/releases.json
@@ -1,8 +1,8 @@
 {
   "0.1.0": {
-    "hash": "/ipfs/QmWBNqJYike3V4kAQtAheUxcpQrjzyjyHbJh2jBXuFKaLE",
+    "hash": "/ipfs/QmTZByhMMNM1ntzaesMz33kMydfNog3Ma14qhw7abRLRVa",
     "uploadedTo": {
-      "remote": "Sun, 18 Oct 2020 13:17:41 GMT"
+      "dappnode": "Thu, 29 Oct 2020 19:10:12 GMT"
     }
   }
 }
