--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,25 @@
-version: '3.4'
+version: "3.4"
 services:
-  turbo-geth.dnp.dappnode.eth:
+  tg:
+    image: "tg.turbo-geth.dnp.dappnode.eth:0.1.0"
     build:
-      context: ./build
+      context: tg
       args:
         UPSTREAM_VERSION: v2020.11.04
-    image: 'turbo-geth.dnp.dappnode.eth:0.1.0'
     restart: always
     volumes:
-      - 'data:/root/.local/share/turbogeth'
+      - "data:/root/.local/share/turbogeth"
     environment:
       - LMDB_MAPSIZE=2000GB
-      - EXTRA_OPTS=''
+      - TURBO_GETH_EXTRA_OPTS=''
+  rpcdaemon:
+    image: "rpcdaemon.turbo-geth.dnp.dappnode.eth:0.1.0"
+    build:
+      context: rpcdaemon
+      args:
+        UPSTREAM_VERSION: v2020.11.04
+    environment:
+      - 'RPCDAEMON_EXTRA_OPTS=--http.api="eth,debug,net"'
+    restart: always
 volumes:
   data: {}
