--- a/tg/Dockerfile
+++ b/tg/Dockerfile
@@ -17,6 +17,10 @@ FROM alpine:3.12
 RUN apk add --no-cache ca-certificates libgcc libstdc++ supervisor
 COPY --from=builder /app/build/bin/* /usr/local/bin/
 
-COPY supervisord.conf /etc/supervisord/supervisord.conf
-
-ENTRYPOINT ["supervisord","-c","/etc/supervisord/supervisord.conf"]
+ENTRYPOINT [ "sh", "-c", "exec tg \
+    --lmdb.mapSize=\"${ENV_LMDB_MAPSIZE}\" \ 
+    --metrics \
+    --metrics.addr=\"0.0.0.0\" \
+    --metrics.port=\"6060\" \
+    --private.api.addr=\"0.0.0.0:9090\" \
+    ${TURBO_GETH_EXTRA_OPTS}" ]
