--- a/releases.json
+++ b/releases.json
@@ -1,8 +1,8 @@
 {
   "0.1.0": {
-    "hash": "/ipfs/QmTZByhMMNM1ntzaesMz33kMydfNog3Ma14qhw7abRLRVa",
+    "hash": "/ipfs/Qme7gYzzXbFDDLe3bzxBkff15xffsCaTnBXVEXFTWo7UZN",
     "uploadedTo": {
-      "dappnode": "Thu, 29 Oct 2020 19:10:12 GMT"
+      "remote": "Sat, 28 Nov 2020 10:30:57 GMT"
     }
   }
 }
