--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - "data:/root/.local/share/turbogeth"
     environment:
-      - LMDB_MAPSIZE=2000GB
       - TURBO_GETH_EXTRA_OPTS=''
   rpcdaemon:
     image: "rpcdaemon.turbo-geth.dnp.dappnode.eth:0.1.0"
@@ -19,7 +18,7 @@ services:
       args:
         UPSTREAM_VERSION: v2020.11.04
     environment:
-      - 'RPCDAEMON_EXTRA_OPTS=--http.api="eth,debug,net"'
+      - "RPCDAEMON_EXTRA_OPTS=--http.api=eth,debug,net"
     restart: always
 volumes:
   data: {}
