--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -4,14 +4,12 @@
   "shortDescription": "Turbo-Geth is a fork of Go-Ethereum with focus on performance.",
   "description": "Alternative implementation of Ethereum (Eth 1.x), derived from go-ethereum. The main difference between turbo-geth and go-ethereum is in the way the database is used to store and access the Ethereum state and its history. This change has a profound effect on many parts of the code. Currently, turbo-geth only supports full sync from genesis block, but it will support snapshot sync which is more efficient than fast sync and more secure than warp sync. Turbo-geth is also used as a platform for the research into Stateless Ethereum.",
   "upstreamVersion": "v20201.01.02",
+  "upstreamRepo": "ledgerwatch/turbo-geth",
+  "upstreamArg": "UPSTREAM_VERSION",
   "type": "service",
   "chain": "ethereum",
-  "categories": [
-    "Developer tools"
-  ],
-  "architectures": [
-    "linux/amd64"
-  ],
+  "categories": ["Developer tools"],
+  "architectures": ["linux/amd64"],
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
   "contributors": [
     "Eduardo Antuña <eduadiez@gmail.com> (https://github.com/eduadiez)"
